--- a/src/main/resources/DEFAULT_VISA_APPLICATION_FORM.json
+++ b/src/main/resources/DEFAULT_VISA_APPLICATION_FORM.json
@@ -1,9 +1,9 @@
 {
-  "citizenshipValue": "Turkey",
+  "citizenshipValue": "Afghanistan",
   "citizenshipValueOfFamilyMember": null,
-  "numberOfApplicants": "1",
-  "isThereFamilyMember": "2",
-  "serviceType": "Apply for a permanent settlement permit",
+  "numberOfApplicants": "3",
+  "isThereFamilyMember": "1",
+  "serviceType": "Apply for a residence title",
   "visaPurpose": "Economic activity",
   "visaType" : "Residence permit for job-seeking qualified skilled workers – Issuance (sect. 20)"
 }
